--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,6 +67,7 @@ html, body {
   padding: 0; /* 去掉默认内边距 */
   min-height: 100%; /* 确保背景覆盖整个视口 */
   height: 100%; /* 适配高度 */
+  -webkit-overflow-scrolling: touch;
 }
 
 @layer utilities {
